# trajectory-interpolator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh  package.xml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
cmake/: trajectory_interpolatorConfig.cmake.in
docs/: CHANGELOG.md  DEVELOPER.md  DOCUMENTATION.md  README.md  RELEASE_NOTES.md  SECURITY.md  TUTORIAL.md
examples/: basic_interpolation_example.cpp
include/: trajectory_interpolator.hpp
include/trajectory_interpolator/: config.hpp  moveit_spline_adapter.hpp  trajectory_interpolator.hpp
src/: moveit_spline_adapter.cpp  trajectory_interpolator.cpp
tests/: test_moveit_compatibility.cpp  test_trajectory_interpolator.cpp
